- Added support for strawpoll.com - Requires db id->string conversion (update-notes.md).

--- a/views/matches.edit.ejs
+++ b/views/matches.edit.ejs
@@ -16,10 +16,10 @@
             <div class="columns is-multiline strawpoll-controls">
                 <div class="column is-3">
                     <div class="field">
-                        <label class="label is-small">Strawpoll id:</label>
-                        <div class="control has-tooltip" tooltip-text="Digits only">
-                            <input class="input is-small form-strawpoll-id" type="text" placeholder="123456789..." pattern="^[\d]+$"
-                                   mongo-key="id" name="id" autocomplete="off" title required />
+                        <label class="label is-small">Poll URL:</label>
+                        <div class="control has-tooltip" tooltip-text="A valid URL Address">
+                            <input class="input is-small form-strawpoll-id" type="text" placeholder="123456789..." mongo-key="id" name="id"
+                                   autocomplete="off" title required />
                         </div>
                     </div>
                 </div>
